--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hello — Week 1: AWS S3 Static Site</h1>
-    <p>This is a test static site uploaded to S3.</p>
+    <p>This is boto3 test static site uploaded to S3.</p>
+    <p>This is boto3 test static site uploaded to S3.</p>
   </body>
 </html>
